[package]
name = "provider_enum"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "provider_enum-cli"
path = "src/bin.rs"

[lib]
name = "provider_enum"
path = "src/lib.rs"

[dependencies]
ferrisetw = { git = "https://github.com/medioxor/ferrisetw", branch = "support_tdh_counted_ansi" }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
bitflags = "2.6.0"
windows = { version = "0.59.0", features = ["Win32_System_Diagnostics_Etw", "Wdk_System_SystemServices", "Win32_System_WindowsProgramming", "Win32_System_Diagnostics_Debug", "Win32_System_Threading"] }
lazy_static = "1.5.0"
